# test_svfits

./: PlotPostCorr.md  ReadRawvis.md  Readme  SVFITS.md  antsamp.hdr  benchmark_svfits.sh  makefile  newcorr.h  novas_prenut.c  plot_flagged.py  plot_postcorr.py  read_rawvis.py  sla_prenut.c  svfits.c  svfits.docx  svfits_par.txt  svio.h  svsubs.c  utils.c
imager/include/: cleaner.hpp  config.hpp  coordinates.hpp  fits_output.hpp  gridder.hpp  kernel.hpp  reader.hpp  utils.hpp
imager/src/: cleaner.cpp  config.cpp  coordinates.cpp  fits_output.cpp  gridder.cpp  kernel.cpp  main.cpp  reader.cpp  utils.cpp
ugmrt_cuda/: .gitignore  CMakeLists.txt  Makefile.test  README.md  test_init.c  test_reader.c
ugmrt_cuda/include/: cf_generator.h  cuda_gridder.h  cuda_types.h  svfits_reader.h  visibility_queue.h
ugmrt_cuda/src/: cf_generator.cu  cuda_gridder.cu  fits_output.c  main.c  svfits_reader.c  visibility_queue.c
ugmrt_cuda/svfits/: stub_prenut.c  svsubs.c
ugmrt_cuda/tools/: generate_cf.c
ugmrt_imager/: CMakeLists.txt  README.md
ugmrt_imager/include/: cf_kernel.hpp  svfits_reader.hpp  ugmrt_imager.hpp  vis_to_hpg.hpp
ugmrt_imager/src/: cf_kernel.cpp  fits_output.cpp  main.cpp  svfits_reader.cpp  ugmrt_imager.cpp  vis_to_hpg.cpp
ugmrt_imager/svfits/: gmrt_newcorr.h  stats.c  svio.h  utils.c
